# Zephyr_usb_stack

usb_stack/: CMakeLists.txt  Kconfig  README.md  USB_Stack_Implementation_Summary.md  USB_Stack_Sequence_Diagrams.md
usb_stack/adaptation/: CMakeLists.txt  usb_adaptation.c
usb_stack/application/: CMakeListss.txt  usb_serial.c
usb_stack/controller/: CMakeLists.txt  dwc3_controller.c
usb_stack/device_core/: CMakeLists.txt  usb_device_core.c
usb_stack/function_driver/: CMakeLists.txt  usb_function_driver.c
usb_stack/hardware/include/: dwc3_regs.h
usb_stack/include/: usb_stack.h  usb_stack_config.h  usb_stack_types.h
usb_stack/phy/: CMakeLists.txt  qcom_phy.c  qcom_phy_internal.h  qcom_phy_regs.h  qcom_redriver.c  qcom_repeater.c  qcom_retimer.c
usb_stack/src/: usb_stack_core.c  usb_stack_init.c
usb_stack/typec/: CMakeLists.txt  typec_manager.c
